--- a/main.html
+++ b/main.html
@@ -10,6 +10,9 @@
     />
     <title>웹카페 - HTML5, CSS3, 웹표준, 웹접근성</title>
     <link rel="stylesheet" href="css/main.css" />
+    <!-- <link rel="stylesheet" href="css/main-flex.css" /> -->
+    <script src="./js/jquery.min.js" defer></script>
+    <script src="./js/main.js" defer></script>
   </head>
   <body>
     <div class="container">
@@ -18,7 +21,7 @@
           <a href="#"><img src="./images/logo.png" alt="Web Cafe"/></a>
         </h1>
         <ul class="member">
-          <li><a href="">홈</a></li>
+          <li><a href="#">홈</a></li>
           <li><span aria-hidden="true">:</span><a href="#">로그인</a></li>
           <li><span aria-hidden="true">:</span><a href="#">회원가입</a></li>
           <li><span aria-hidden="true">:</span><a href="#">사이트맵</a></li>
@@ -28,7 +31,7 @@
         <nav class="navigation">
           <h2 class="a11y-hidden">메인 메뉴</h2>
           <ul class="menu">
-            <li class="menu-item">
+            <li class="menu-item menu-item-act">
               <a href="#" class="menu-link">HTML에 대해</a>
               <ul class="submenu">
                 <li><a href="#">HTML5 소개</a></li>
@@ -53,19 +56,13 @@
                 <li><a href="#">HTML5의 현재와 미래</a></li>
               </ul>
             </li>
-            <li class="menu-item menu-item-act">
+            <li class="menu-item">
               <a href="#" class="menu-link">웹 접근성</a>
               <ul class="submenu">
-                <li>
-                  <a href="#" class="icon-dot-circled">웹 접근성의 개요</a>
-                </li>
-                <li>
-                  <a href="#" class="icon-dot-circled">장애 환경의 이해</a>
-                </li>
-                <li><a href="#" class="icon-dot-circled">장차법</a></li>
-                <li>
-                  <a href="#" class="icon-dot-circled">웹 접근성 품질마크</a>
-                </li>
+                <li><a href="#">웹 접근성의 개요</a></li>
+                <li><a href="#">장애 환경의 이해</a></li>
+                <li><a href="#">장차법</a></li>
+                <li><a href="#">웹 접근성 품질마크</a></li>
               </ul>
             </li>
             <li class="menu-item">
@@ -90,9 +87,53 @@
           </ul>
         </nav>
       </header>
-      <div class="visual">비쥬얼</div>
+      <div class="visual">
+        <div class="visual-text">
+          Web Standard &amp; Accessibility
+          <!-- 기호를 html이 명령어로 잘못 읽을수가 있음 -->
+        </div>
+      </div>
       <main class="main">
-        <div class="group group1">Group1</div>
+        <div class="group group1">
+          <section class="login">
+            <h2 class="login-heading">로그인</h2>
+            <form
+              action="https://formspree.io/mpzljyyp"
+              class="login-form"
+              method="post"
+            >
+              <fieldset>
+                <legend>회원 로그인 폼</legend>
+                <div class="user-email">
+                  <label for="userEmail">아이디</label>
+                  <input
+                    type="email"
+                    id="userEmail"
+                    name="userEmail"
+                    required
+                    placeholder="guest@webcafe.com"
+                  />
+                </div>
+                <div class="user-pw">
+                  <label for="userPw">비밀번호</label>
+                  <input
+                    type="password"
+                    id="userPw"
+                    name="userPw"
+                    required
+                    placeholder="8자리 이하"
+                    maxlength="8"
+                  />
+                </div>
+                <button class="btn-login" type="submit">로그인</button>
+              </fieldset>
+            </form>
+            <ul class="sign">
+              <li><a href="#">회원가입</a></li>
+              <li><a href="#">아이디/비밀번호 찾기</a></li>
+            </ul>
+          </section>
+        </div>
         <div class="group group2">Group2</div>
         <div class="group group3">Group3</div>
       </main>
