--- a/main.html
+++ b/main.html
@@ -105,18 +105,18 @@
               <fieldset>
                 <legend>회원 로그인 폼</legend>
                 <div class="user-email">
-                  <label for="userEmail">아이디</label>
-                  <input
+                  <label for="userEmail">아이디</label
+                  ><input
                     type="email"
                     id="userEmail"
                     name="userEmail"
                     required
-                    placeholder="guest@webcafe.com"
+                    placeholder="이메일 주소"
                   />
                 </div>
                 <div class="user-pw">
-                  <label for="userPw">비밀번호</label>
-                  <input
+                  <label for="userPw">비밀번호</label
+                  ><input
                     type="password"
                     id="userPw"
                     name="userPw"
@@ -129,8 +129,18 @@
               </fieldset>
             </form>
             <ul class="sign">
-              <li><a href="#">회원가입</a></li>
-              <li><a href="#">아이디/비밀번호 찾기</a></li>
+              <li>
+                <a href="#">
+                  <span class="icon-right-hidden" aria-hidden="true"></span>
+                  회원가입
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="icon-right-hidden" aria-hidden="true"></span>
+                  아이디/비밀번호 찾기
+                </a>
+              </li>
             </ul>
           </section>
         </div>
