--- a/main.html
+++ b/main.html
@@ -196,7 +196,44 @@
             </dl>
           </section>
         </div>
-        <div class="group group2">Group2</div>
+        <div class="group group2">
+          <section class="search">
+            <h2 class="a11y-hidden">검색</h2>
+            <form
+              action="https://formspree.io/mpzljyyp"
+              class="search-form"
+              method="GET"
+            >
+              <fieldset>
+                <legend>검색 폼</legend>
+                <div class="flex-box">
+                  <label for="search"
+                    ><span class="icon-search"></span> 자료검색</label
+                  >
+                  <input
+                    type="search"
+                    id="search"
+                    name="keyword"
+                    placeholder="검색어를 입력하세요"
+                    required
+                  />
+                  <button class="search-btn" type="submit">검색</button>
+                </div>
+                <!-- <label for="search"
+                    ><span class="icon-search"></span> 자료검색</label
+                  >
+                  <input
+                    type="search"
+                    id="search"
+                    name="keyword"
+                    placeholder="검색어를 입력하세요"
+                    required
+                  />
+                  <button class="search-btn" type="submit">검색</button> -->
+              </fieldset>
+            </form>
+          </section>
+        </div>
         <div class="group group3">Group3</div>
       </main>
       <article class="slogan">슬로건</article>
