--- a/main.html
+++ b/main.html
@@ -324,11 +324,46 @@
               </a>
             </article>
             <a href="#" class="more" title="새소식" aria-label="새소식"
-              ><span class="icon-plus"></span>더보기</a
+              ><span class="icon-plus"></span> 더보기</a
             >
           </section>
         </div>
-        <div class="group group3">Group3</div>
+        <div class="group group3">
+          <section class="event">
+            <h2 class="event-heading">
+              신규 <span class="point-color">이벤트</span>
+            </h2>
+            <div id="eventDetail">
+              <p class="event-thumbnail">
+                <img
+                  src="./images/free_gift.gif"
+                  alt="이벤트경품: 웹 표준 핵심가이드북2 도서 증정"
+                />
+              </p>
+              <p class="event-brief">
+                <em>웹표준 핵심가이드북 2 출시!</em> 선착순 500명 한정으로 증정.
+              </p>
+            </div>
+            <div class="button-event">
+              <button type="button" class="event-button-prev">
+                <span>이전 이벤트 보기</span>
+              </button>
+              <button type="button" class="event-button-next">
+                <span>다음 이벤트 보기</span>
+              </button>
+            </div>
+          </section>
+          <section class="relation-site">
+            <h2 class="relation-site">관련 <span>사이트</span></h2>
+            <ul class="relation-site-list">
+              <li>멀티캠퍼스</li>
+              <li>W3C</li>
+              <li>CSS ZenGarden</li>
+              <li>웹접근성 연구소</li>
+              <li>Web Standards</li>
+            </ul>
+          </section>
+        </div>
       </main>
       <article class="slogan">슬로건</article>
       <div class="footer-bg">
