--- a/main.html
+++ b/main.html
@@ -329,40 +329,61 @@
           </section>
         </div>
         <div class="group group3">
-          <section class="event">
-            <h2 class="event-heading">
-              신규 <span class="point-color">이벤트</span>
-            </h2>
-            <div id="eventDetail">
-              <p class="event-thumbnail">
-                <img
-                  src="./images/free_gift.gif"
-                  alt="이벤트경품: 웹 표준 핵심가이드북2 도서 증정"
-                />
-              </p>
-              <p class="event-brief">
-                <em>웹표준 핵심가이드북 2 출시!</em> 선착순 500명 한정으로 증정.
-              </p>
-            </div>
-            <div class="button-event">
-              <button type="button" class="event-button-prev">
-                <span>이전 이벤트 보기</span>
-              </button>
-              <button type="button" class="event-button-next">
-                <span>다음 이벤트 보기</span>
-              </button>
-            </div>
-          </section>
-          <section class="relation-site">
-            <h2 class="relation-site">관련 <span>사이트</span></h2>
-            <ul class="relation-site-list">
-              <li>멀티캠퍼스</li>
-              <li>W3C</li>
-              <li>CSS ZenGarden</li>
-              <li>웹접근성 연구소</li>
-              <li>Web Standards</li>
-            </ul>
-          </section>
+          <div class="gradient">
+            <section class="event">
+              <h2 class="event-heading">
+                신규 <span class="point-color">이벤트</span>
+              </h2>
+              <div id="eventDetail">
+                <p class="event-thumbnail">
+                  <img
+                    src="./images/free_gift.gif"
+                    alt="이벤트경품: 웹 표준 핵심가이드북2 도서 증정"
+                  />
+                </p>
+                <p class="event-brief">
+                  <em>웹표준 핵심가이드북 2 출시!</em> 선착순 500명 한정으로
+                  증정.
+                </p>
+              </div>
+              <div class="button-event">
+                <button type="button" class="event-button-prev">
+                  <span>이전 이벤트 보기</span>
+                </button>
+                <button type="button" class="event-button-next">
+                  <span>다음 이벤트 보기</span>
+                </button>
+              </div>
+            </section>
+            <section class="related-site">
+              <h2 class="related-heading">
+                관련 <span class="point-color">사이트</span>
+              </h2>
+              <ul class="related-site-list">
+                <li><a href="#">패스트캠퍼스</a></li>
+                <li><a href="#">ZenGarden</a></li>
+                <li><a href="#">W3C</a></li>
+                <li><a href="#">웹접근성 연구소</a></li>
+                <li><a href="#">Web Standards</a></li>
+              </ul>
+            </section>
+          </div>
+          <div class="">
+            <section class="favorite gradient">
+              <h2 class="favorite-heading">
+                인기 <span class="point-color">사이트</span>
+              </h2>
+              <ol class="favorite-list">
+                <li>
+                  <a href="#" data-message="hi">W3C</a><em class="up">상승</em>
+                </li>
+                <li><a href="#">CSS ZenGarden</a><em class="down">하락</em></li>
+                <li><a href="#">MDN</a><em class="stop">멈춤</em></li>
+                <li><a href="#">Web Standards</a><em class="up">상승</em></li>
+              </ol>
+              <a href="#" class="icon-plus more" title="인기 사이트">더보기</a>
+            </section>
+          </div>
         </div>
       </main>
       <article class="slogan">슬로건</article>
